--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@nuxtjs/google-fonts": "^3.1.3",
     "nuxt": "^3.9.3",
+    "sass": "^1.70.0",
     "vue": "^3.4.14",
     "vue-router": "^4.2.5"
   }
