--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "sass": "^1.70.0",
     "vue": "^3.4.14",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "vue3-carousel-nuxt": "^1.1.0"
   }
 }
