--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@nuxtjs/tailwindcss": "^6.11.1",
     "nuxt": "^3.9.3",
     "sass": "^1.70.0",
+    "typescript": "^5.3.3",
     "vue": "^3.4.14",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.5.1",
+    "pinia": "^2.1.7",
     "vue3-carousel-nuxt": "^1.1.0"
   }
 }
